crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__tagged_template_hole_end.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = html`hello ${ value )`"
---
alder::syntax

  × I was expecting `}` to close this template interpolation
   ╭─[/project/src/main.ald:1:33]
 1 │ let value = html`hello ${ value )`
   ·                 ┬               ┬
   ·                 │               ╰── expected `}`
   ·                 ╰── this template starts here
   ╰────
  help: each `${` interpolation must end with `}` before the template text
        continues
