crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__template_nested_expression.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "let value = `hello ${ read(1 2) }`"
---
alder::syntax

  × I was expecting `,` or `)` after this call argument
   ╭─[/project/src/main.ald:1:30]
 1 │ let value = `hello ${ read(1 2) }`
   ·                           ┬  ┬
   ·                           │  ╰── expected `,` or `)`
   ·                           ╰── this `(` opens here
   ╰────
  help: separate arguments with commas and close the call with `)`
