crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__tests_end.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "tests { let value = 1 42 }"
---
alder::syntax

  × I was expecting another declaration or the end of this tests block
   ╭─[/project/src/main.ald:1:23]
 1 │ tests { let value = 1 42 }
   · ┬                     ┬
   · │                     ╰── expected a declaration or `}`
   · ╰── this tests block starts here
   ╰────
  help: put declarations such as `test`, `fn`, or `let` on separate lines and
        close the block with `}`
