crates/alder-driver/src/report/snapshots/alder_driver__report__syntax_tests__tests_nested_item.snap
---
source: crates/alder-driver/src/report/syntax_tests.rs
description: "tests { test 42 {} }"
---
alder::syntax

  × I was expecting a quoted test name after `test`
   ╭─[/project/src/main.ald:1:14]
 1 │ tests { test 42 {} }
   ·         ┬    ┬
   ·         │    ╰── expected a string
   ·         ╰── this test declaration starts here
   ╰────
  help: write `test "description" { ... }`
